[master]: improve performance with async invokes and add README.md